# OPN2BankEditor

src/: common.cpp
src/opl/chips/np2/: fmgen_fmgen.cpp  fmgen_fmgen.h  fmgen_fmgeninl.h  fmgen_opna.cpp
src/opl/chips/nuked/: ym3438.c
test-mini-synth/: CMakeLists.txt
test-mini-synth/examples/: bird tweet.opni  ssg-attack.opni  ssg-no-attack.opni  telephone.opni
test-mini-synth/sources/: main.cc  tinysynth.cc  tinysynth.h
